k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vida360-service
  labels:
    app: vida360
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: vida360
